--- a/index.html
+++ b/index.html
@@ -1124,28 +1124,22 @@
                 </section>
 
                 <section class="contact-form">
-                    <h3 class="h3 form-title">Contact Form</h3>
-                    <form action="https://getform.io/f/zbxddnkb" method="POST">
-                        <input type="text" name="name">
-                        <input type="email" name="email">
-                        <input type="text" name="message">
-                        <!-- add hidden Honeypot input to prevent spams -->
-                        <input type="hidden" name="_gotcha" style="display:none !important">
-                        <!-- checkbox handle -->
-                        <input type="checkbox" name="subscribe" value="yes" checked>
-                        <input type="hidden" name="subscribe" value="no">
-                        <!-- radio button handle -->
-                        <input type="radio" name="gender" value="male" checked>
-                        <input type="radio" name="gender" value="female">
-                        <input type="radio" name="gender" value="other">
-                        <!-- select field handle -->
-                        <select name="work-experience">
-                          <option value="one-year">0-1 years</option>
-                          <option value="one-five-years">1-5 years</option>
-                      </select>
-                        <button type="submit">Send</button>
-                    </form>
-                </section>
+    <h3 class="h3 form-title">Contact Form</h3>
+    <form action="https://getform.io/f/your_getform_endpoint_here" method="POST" class="form" data-form>
+        <div class="input-wrapper">
+            <input type="text" name="fullname" class="form-input" placeholder="Full name" required data-form-input>
+            <input type="email" name="email" class="form-input" placeholder="Email address" required data-form-input>
+        </div>
+        <textarea name="message" class="form-input" placeholder="Your Message" required data-form-input></textarea>
+        <button class="form-btn" type="submit" data-form-btn>
+            <ion-icon name="paper-plane"></ion-icon>
+            <span>Send Message</span>
+        </button>
+        <!-- Скрытое поле для указания вашего Getform endpoint -->
+        <input type="hidden" name="form_id" value="your_getform_endpoint_here">
+    </form>
+</section>
+
 
 
 
