--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
 
 
                 <div style="text-align: center;">
-                    <a href="https://t.me/your_telegram_username" class="btn" target="_blank">
+                    <a href="https://t.me/Alexandr_Madibaev" class="btn" target="_blank">
                         <i class="fab fa-telegram" aria-hidden="true"></i>Send me
                     </a>
                 </div>
