--- a/index.html
+++ b/index.html
@@ -456,38 +456,38 @@
                     <ul class="clients-list has-scrollbar">
 
                         <li class="clients-item">
-                            <a href="#">
-                                <img src="./assets/images/logo-1-color.png" alt="client logo">
+                            <a href="https://www.microsoft.com/">
+                                <img src="./assets/images/logo-1-color.png" alt="microsoft">
                             </a>
                         </li>
 
                         <li class="clients-item">
-                            <a href="#">
-                                <img src="./assets/images/logo-2-color.png" alt="client logo">
+                            <a href="https://www.mi.com/">
+                                <img src="./assets/images/logo-2-color.png" alt="xiaomi">
                             </a>
                         </li>
 
                         <li class="clients-item">
-                            <a href="#">
-                                <img src="./assets/images/logo-3-color.png" alt="client logo">
+                            <a href="https://www.ats.tj/">
+                                <img src="./assets/images/logo-3-color.png" alt="ats">
                             </a>
                         </li>
 
                         <li class="clients-item">
-                            <a href="#">
-                                <img src="./assets/images/logo-4-color.png" alt="client logo">
+                            <a href="https://itmo.ru/">
+                                <img src="./assets/images/logo-4-color.png" alt="ITMO University">
                             </a>
                         </li>
 
                         <li class="clients-item">
-                            <a href="#">
-                                <img src="./assets/images/logo-5-color.png" alt="client logo">
+                            <a href="https://alif.tj/">
+                                <img src="./assets/images/logo-5-color.png" alt="alif_bank">
                             </a>
                         </li>
 
                         <li class="clients-item">
-                            <a href="#">
-                                <img src="./assets/images/logo-6-color.png" alt="client logo">
+                            <a href="https://www.instagram.com/buddy_shop.tj/">
+                                <img src="./assets/images/logo-6-color.png" alt="buddy_shop">
                             </a>
                         </li>
 
