--- a/index.html
+++ b/index.html
@@ -456,7 +456,7 @@
                     <ul class="clients-list has-scrollbar">
 
                         <li class="clients-item">
-                            <a href="https://www.microsoft.com/" class="no">
+                            <a href="https://www.microsoft.com/">
                                 <img src="./assets/images/logo-1-color.png" alt="microsoft">
                             </a>
                         </li>
