--- a/index.html
+++ b/index.html
@@ -594,78 +594,59 @@
                 </section>
 
                 <section class="skill">
-
                     <h3 class="h3 skills-title">My skills</h3>
-
                     <ul class="skills-list content-card">
-
                         <li class="skills-item">
-
                             <div class="title-wrapper">
+                                <i class="fas fa-code skill-icon"></i>
                                 <h5 class="h5">Web design</h5>
                                 <data value="80">80%</data>
                             </div>
-
                             <div class="skill-progress-bg">
                                 <div class="skill-progress-fill" style="width: 80%;"></div>
                             </div>
-
                         </li>
-
                         <li class="skills-item">
-
                             <div class="title-wrapper">
+                                <i class="fas fa-paint-brush skill-icon"></i>
                                 <h5 class="h5">Graphic design</h5>
-                                <data value="70">95%</data>
+                                <data value="95">95%</data>
                             </div>
-
                             <div class="skill-progress-bg">
                                 <div class="skill-progress-fill" style="width: 95%;"></div>
                             </div>
-
                         </li>
-
                         <li class="skills-item">
-
                             <div class="title-wrapper">
+                                <i class="fas fa-landmark skill-icon"></i>
                                 <h5 class="h5">Branding</h5>
                                 <data value="90">90%</data>
                             </div>
-
                             <div class="skill-progress-bg">
                                 <div class="skill-progress-fill" style="width: 90%;"></div>
                             </div>
-
                         </li>
-
                         <li class="skills-item">
-
                             <div class="title-wrapper">
+                                <i class="fas fa-cloud skill-icon"></i>
                                 <h5 class="h5">Adobe Pack</h5>
-                                <data value="50">90%</data>
+                                <data value="90">90%</data>
                             </div>
-
                             <div class="skill-progress-bg">
                                 <div class="skill-progress-fill" style="width: 90%;"></div>
                             </div>
-
                         </li>
-
                         <li class="skills-item">
-
                             <div class="title-wrapper">
+                                <i class="fas fa-robot skill-icon"></i>
                                 <h5 class="h5">AI Experience</h5>
-                                <data value="70">60%</data>
+                                <data value="60">60%</data>
                             </div>
-
                             <div class="skill-progress-bg">
                                 <div class="skill-progress-fill" style="width: 60%;"></div>
                             </div>
-
                         </li>
-
                     </ul>
-
                 </section>
 
             </article>
